# ocr-pipeline

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: ocr_processor.py  strategy_factory.py
app/models/: document.py  request.py
app/src/: base.py  easy_ocr_extractor.py  easyocr_text_extractor.py  regex_extractor.py  tesseract_text_extractor.py  text_extractor.py
app/utils/: logger.py  preprocess_pdf.py  response.py  settings.py
